--- a/.hw2/index.html
+++ b/.hw2/index.html
@@ -1,65 +1,93 @@
 <!DOCTYPE html>
+<html lang="en">
   <head>
-    <html lang="en"></html>
-    <meta charest="UTF-8" />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebStudio</title>
+    <title>Web Studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
+
   <body>
-    <header>
-      <nav>
-        <a href="./index.html"> WebStudio</a>
-        <ul>
-          <li><a href="/">Studio</a></li>
-          <li><a href="/">Portfolio</a></li>
-          <li><a href="/">Contacts</a></li>
+    <header class="header">
+      <nav class="header-navigation">
+        <a class="nav-link-logo-blue" href="./index.html"
+          >Web<span class="nav-link-logo">Studio</span></a
+        >
+        <ul class="nav-list">
+          <li class="nav-item-current">
+            <a class="nav-link" href="./index.html" target="_blank">Studio</a>
+          </li>
+          <li class="nav-item-current">
+            <a class="nav-link" href="" target="_blank">Portfolio</a>
+          </li>
+          <li class="nav-item-current">
+            <a class="nav-link" href="" target="_blank">Contacts</a>
+          </li>
         </ul>
       </nav>
-
-      <address>
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <address class="address">
+        <ul class="header-address">
+          <li class="header-address-item">
+            <a class="header-address-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
-          <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li class="header-address-item">
+            <a class="header-address-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
     </header>
+
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button class="hero-bye-btn" type="button">Order Service</button>
       </section>
 
-      <section>
-        <h2>hidden</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <section class="features-section">
+        <h2 class="strategy-title">Strategy</h2>
+        <ul class="features-list">
+          <li class="features-item">
+            <h3 class="features-subtitle">Strategy</h3>
+            <p class="features-item-tex">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="features-subtitle">Punctuality</h3>
+            <p class="features-item-tex">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="features-subtitle">Diligence</h3>
+            <p class="features-item-tex">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="features-subtitle">Technologies</h3>
+            <p class="features-item-tex">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -67,38 +95,136 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
-            <img src="./images/img (1).jpg" width="264" alt="Mark Guerrero" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+      <section class="our-team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-item">
+            <img
+              src="./images/img1.jpg"
+              width="264"
+              height="260"
+              alt="Product Designer"
+              class="team-img"
+            />
+            <h3 class="team-subtitle">Mark Guerrero</h3>
+            <p class="profession">Product Designer</p>
           </li>
-          <li>
-            <img src="./images/img (2).jpg" width="264" alt="Tom Ford" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+          <li class="team-item">
+            <img
+              src="./images/img2.jpg"
+              width="264"
+              height="260"
+              alt="Frontend Developer"
+              class="team-img"
+            />
+            <h3 class="team-subtitle">Tom Ford</h3>
+            <p class="profession">Frontend Developer</p>
           </li>
-          <li>
-            <img src="./images/img (3).jpg" width="264" alt="Camila Garcia" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+          <li class="team-item">
+            <img
+              src="./images/img3.jpg"
+              width="264"
+              height="260"
+              alt="Marketing"
+              class="team-img"
+            />
+            <h3 class="team-subtitle">Camila Garcia</h3>
+            <p class="profession">Marketing</p>
           </li>
-          <li>
-            <img src="./images/img (4).jpg" width="264" alt="Daniel Wilson" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+          <li class="team-item">
+            <img
+              src="./images/img4.jpg"
+              width="264"
+              height="260"
+              alt="UI Designer"
+              class="team-img"
+            />
+            <h3 class="team-subtitle">Daniel Wilson</h3>
+            <p class="profession">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+
+      <section class="our portfolio">
+        <h2 class="portfolio-title">Our Portfolio</h2>
+        <ul class="portfolio-list">
+          <li class="portfolio-item">
+            <img
+              src="./images/portfolio1.jpg"
+              width="360"
+              height="300"
+              alt="Banking App"
+              class="portfolio-img"
+            />
+            <h3 class="portfolio-subtitle">Banking App</h3>
+            <p class="portfolio-direction">App</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              src="./images/portfolio2.jpg"
+              width="360"
+              height="300"
+              alt="Cashless Payment"
+              class="portfolio-img"
+            />
+            <h3 class="portfolio-subtitle">Cashless Payment</h3>
+            <p class="portfolio-direction">Marketing</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              src="./images/portfolio3.jpg"
+              width="360"
+              height="300"
+              alt="Meditation App"
+              class="portfolio-img"
+            />
+            <h3 class="portfolio-subtitle">Meditation App</h3>
+            <p class="portfolio-direction">App</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              src="./images/portfolio4.jpg"
+              width="360"
+              height="300"
+              alt="Taxi Service"
+              class="portfolio-img"
+            />
+            <h3 class="portfolio-subtitle">Taxi Service</h3>
+            <p class="portfolio-direction">Marketing</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              src="./images/portfolio5.jpg"
+              width="360"
+              height="300"
+              alt="Screen Illustrations"
+              class="portfolio-img"
+            />
+            <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+            <p class="portfolio-direction">Design</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              src="./images/portfolio6.jpg"
+              width="360"
+              height="300"
+              alt="Online Courses"
+              class="portfolio-img"
+            />
+            <h3 class="portfolio-subtitle">Online Courses</h3>
+            <p class="portfolio-direction">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
+    <footer class="footer">
+      <a class="footer-logo-link" href="./index.html"
+        >Web<span class="footer-logo">Studio</span></a
+      >
+      <p class="footer-information">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
-  <footer>
-    <a href="./index.html">WebStudio</a>
-    <p>
-      Increase the flow of customers and sales for your business with digital
-      marketing & growth solutions.
-    </p>
-  </footer>
 </html>
